package proto;

message User {
	optional string guid = 1;
}

message UserList {
	repeated User users = 1;
}

message UserFindRequest {
	repeated string guids = 1;
}

service UserService {
	rpc find (UserFindRequest) returns (UserList);
	rpc create (User) returns (User);
}